test/tests/stages/12_unsigned_integers/valid/explicit_casts/chained_casts.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[48]:
  unsigned
  int
  identifier(ui)
  =
  const unsigned int(4294967200u)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  (
  long
  )
  (
  signed
  )
  identifier(ui)
  !=
  -
  const long(96l)
  )
  return
  const int(1)
  ;
  if
  (
  (
  unsigned
  long
  )
  (
  signed
  )
  identifier(ui)
  !=
  const unsigned long(18446744073709551520ul)
  )
  return
  const int(2)
  ;
  return
  const int(0)
  ;
  }
