test/tests/stages/12_unsigned_integers/invalid_parse/bad_specifiers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(0)
  ;
  return
  (
  signed
  unsigned
  )
  identifier(i)
  ;
  }
